test-non-compliant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-non-compliant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      serviceAccountName: default
      containers:
      - name: test
        image: nginx
